[gd_scene load_steps=2 format=3 uid="uid://s8rn8shwb1w7"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_u6oej"]

[node name="ui" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 640.0
scale = Vector2(1.0058, 0.995202)
script = ExtResource("1_u6oej")

[node name="settings_btn" type="Button" parent="."]
layout_mode = 0
offset_right = 79.0
offset_bottom = 31.0
text = "Settings"

[node name="menu_win" type="Window" parent="."]
title = "Settings"
initial_position = 1
size = Vector2i(145, 130)
visible = false
unresizable = true

[node name="menu_top_vbox" type="VBoxContainer" parent="menu_win"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_right = 67.0
offset_bottom = 66.0
grow_horizontal = 2

[node name="full_mode_cbtn" type="CheckButton" parent="menu_win/menu_top_vbox"]
layout_mode = 2
text = "Full_screen"

[node name="menu_bottom_vbox" type="VBoxContainer" parent="menu_win"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -18.5
offset_top = -31.0
offset_right = 18.5
grow_horizontal = 2
grow_vertical = 0

[node name="exit_btn" type="Button" parent="menu_win/menu_bottom_vbox"]
layout_mode = 2
text = "Exit"
